--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="content">
             <div class="main-content">
                 <h1 data-aos="fade-right" data-aos-duration="1500">Hi! I Am</h1>
-                <span data-aos="fade-left" data-aos-duration="1500" data-aos-delay="200">John Smith.</span>
-                <p data-aos="flip-up" data-aos-duration="1500" data-aos-delay="400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod deserunt consequuntur aut ea molestias.</p>
+                <span data-aos="fade-left" data-aos-duration="1500" data-aos-delay="200">Ayush Dev.</span>
+                <p data-aos="flip-up" data-aos-duration="1500" data-aos-delay="400">Aspiring full stack developer with a passion for building dynamic, user-friendly web applications. Skilled in designing responsive front-end interfaces and developing robust back-end systems. Dedicated to developing reliable and efficient digital solutions by applying best practices.</p>
                 <div class="buttons">
                     <button data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="600">Hire me</button>
                     <button data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="600">See my Work</button>
